--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.0.0",
+    "@astrojs/react": "^4.1.0",
     "@astrojs/tailwind": "^5.1.3",
+    "@astrojs/vercel": "^8.0.1",
+    "@nanostores/react": "^0.8.4",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
     "astro": "^5.0.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.465.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.5",
+    "astro-feather": "^1.0.0",
+    "flowbite": "^2.5.2",
+    "nanostores": "^0.11.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
+    "react-hook-form": "^7.54.1",
     "tailwindcss": "^3.4.16",
-    "tailwindcss-animate": "^1.0.7"
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2"
   }
 }
