--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.1.0",
     "@astrojs/tailwind": "^5.1.3",
     "@astrojs/vercel": "^8.0.1",
@@ -24,6 +25,7 @@
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.54.1",
     "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
