Add a test email route

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
+## GOOGLE RECAPTCHA
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
+
+## MAILTRAP
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
