--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro-feather": "^1.0.0",
     "flowbite": "^2.5.2",
     "nanostores": "^0.11.3",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
@@ -29,6 +30,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2"
+    "@types/node": "^22.10.2",
+    "@types/nodemailer": "^6.4.17"
   }
 }
