Add ability to send emails to user and to myself

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ MAIL_HOST=
 MAIL_PORT=
 MAIL_USERNAME=
 MAIL_PASSWORD=
+
+## true or false
+MAINTENANCE_MODE=false
+
+## EMAIL ADDRESS WHERE I WANT TO GET THE CONTACT FORM SUBMISSIONS
+MY_EMAIL_ADDRESS=
