--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.54.1",
+    "sanitize-html": "^2.14.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
-    "@types/nodemailer": "^6.4.17"
+    "@types/nodemailer": "^6.4.17",
+    "@types/sanitize-html": "^2.13.0"
   }
 }
