Add api token and cloudflare turnstile site keys

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ MY_EMAIL_ADDRESS=
 PUBLIC_GA_ID=G-
 CHATBOT_API_URL=http://localhost:3000
 DISPLAY_CHATBOT=true
+CHATBOT_API_TOKEN=
+CHATBOT_TURNSTILE_SITE_KEY=
